--- a/Index.html
+++ b/Index.html
@@ -27,15 +27,16 @@
        </div>
     </div>
    </header >
-   <section class="herosection">
+   <!-- Home section........... -->
+   <section class="herosection mt-3 ">
     <div class="container">
     <div class="row pt-lg-5 ">
         <div class="col-lg-6 pt-5 ">
        <h2 class="pt-4 ">Introduce Your Product<br> Quickly & Effectively</h2>
        <br>
-       <h6>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
         <br> Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
-        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</h6>
+        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
         <br>
         <button class="login ">Purchase UI Kit</button>
         <button class="secondbutton">Learn More</button>
@@ -46,5 +47,100 @@
    </div>
  </div>
 </section>
+<!-- Home section2........... -->
+<section class="herosection mt-3 ">
+  <div class="container">
+    <div class="row pt-lg-5 ">
+        <div class="col-lg-6 pt-5 ">
+       <h2 class="pt-4 ">Light, Fast & Powerful</h2>
+       <br>
+       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+        <br>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+        <div class="icons d-flex ">
+        <div class="icon">
+          <img src="images/1.png " alt="">
+          <h3>Title Goes Here</h3>
+          <p class="p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</p>
+          </div>
+          <div class="icon">
+            <img src="images/1.png" alt="">
+          <h3>Title Goes Here</h3>
+          <p class="p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</p>
+          </div>
+        </div>
+         </div>
+      <div class="col-lg-6 ">
+        <img src="images/2nd sec.jpg" style="height: 500px; width: 500px">
+      </div>
+   </div>
+ </div>
+</section>
+<!-- Home section3........... -->
+<section class="herosection mt-3">
+  <div class="container">
+  <div class="row pt-lg-5 ">
+     <div class="col-lg-6 ">
+      <img src="images/3rd sec.jpg" style="height: 315px; width: 480px">
+    </div>
+    <div class="col-lg-6 pt-5 ">
+      <h2 class="pt-4 ">Introduce Your Product<br> Quickly & Effectively</h2>
+      <br>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+       <br> Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+       Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+       </div>
+ </div>
+</div>
+</section>
+<!-- section 4.... -->
+<section class="herosection mt-3">
+  <div class="container">
+  <div class="row pt-lg-5 ">
+     <div class="col-lg-6 ">
+      <img src="images/4rd sec.jpg" style="height: 315px; width: 480px">
+    </div>
+    <div class="col-lg-6 pt-5 ">
+      <h2 class="pt-4 ">Introduce Your Product<br> Quickly & Effectively</h2>
+      <br>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+       <br> Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+       Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+       </div>
+ </div>
+</div>
+</section>
+<!-- section 5.... -->
+<section class="herosection mt-3">
+  <div class="container">
+  <div class="row pt-lg-5">
+     <div class="col-lg-6 ">
+      <img src="images/5th sec.jpg" style="height: 320px; width: 445px">
+    </div>
+    <div class="col-lg-6 pt-5 ">
+      <h2 class="pt-4 ">Introduce Your Product<br> Quickly & Effectively</h2>
+      <br>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+       <br> Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+       Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+       <br>
+        <button class="login ">Purchase UI Kit</button>
+       </div>
+ </div>
+</div>
+</section>
+ <!-- setion 6.... -->
+ <section class="herosection mt-3 ">
+      <div class="container">
+        <div class="row text-center ">
+          <h1 style="color: #505F98;">A Price To Suit Everyone</h1>
+          <p style="color: #505F98;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br> Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,<br>   nascetur ridiculus</p>
+          <h1 style="color: #505F98;">$40</h1>
+          <h6 style="color: #505F98;">UI Design Kit</h6>
+           <h6 style="color: #505F98;">See, One price. Simple</h6>
+        <button class="login1">Purchase UI Kit</button>
+        </div>
+      </div>
+ </section>
 </body>
 </html>
